# structural-convert

./: Cargo.toml  LICENSE  README.md
src/: ident_as_literal_list.rs  lib.rs  structural_convert.rs
structural-convert-derive/: Cargo.toml  README.md
structural-convert-derive/src/: lib.rs  structural_convert.rs
structural-convert-derive/src/structural_convert/: attributes.rs  conversion_error.rs  on_enum_data.rs  on_field_type.rs  on_fields_unnamed.rs  on_struct_data.rs
structural-convert-derive/src/structural_convert/attributes/: from_container_attributes.rs  into_container_attributes.rs  try_from_container_attributes.rs  try_into_container_attributes.rs
structural-convert-derive/src/structural_convert/attributes/enum_variant/: from_enum_variant_attributes.rs  into_enum_variant_attributes.rs  mod.rs  try_from_enum_variant_attributes.rs  try_into_enum_variant_attributes.rs
structural-convert-derive/src/structural_convert/attributes/named_field/: from_field_named_attributes.rs  into_field_named_attributes.rs  mod.rs  try_from_field_named_attributes.rs  try_into_field_named_attributes.rs
structural-convert-derive/src/structural_convert/on_enum_data/: create_from_impl_for_enum.rs  create_into_impl_for_enum.rs  create_try_from_impl_for_enum.rs  create_try_into_impl_for_enum.rs  utils.rs
structural-convert-derive/src/structural_convert/on_fields_named/: create_from_match_branch_for_fields_named.rs  create_into_match_branch_for_fields_named.rs  create_match_branch_for_fields_named.rs  create_try_from_match_branch_for_fields_named.rs  create_try_into_match_branch_for_fields_named.rs
structural-convert-derive/src/structural_convert/on_struct_data/: create_from_impl_for_struct.rs  create_into_impl_for_struct.rs  create_try_from_impl_for_struct.rs  create_try_into_impl_for_struct.rs
tests/: from_enum.rs  from_enum_default.rs  from_enum_option.rs  from_enum_rename.rs  from_enum_skip.rs  from_struct.rs  from_struct_as.rs  from_struct_default.rs  from_struct_generic_types.rs  from_struct_option.rs  from_struct_rename.rs  from_struct_skip.rs  into_enum.rs  into_enum_default.rs  into_enum_option.rs  into_enum_rename.rs  into_enum_skip.rs  into_struct.rs  into_struct_as.rs  into_struct_default.rs  into_struct_generic_types.rs  into_struct_option.rs  into_struct_rename.rs  into_struct_skip.rs  (+22 more)
(+23 files in other folders)
