[package]
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2021"
name = "structural-convert"
description = "Derive conversion traits when items are structurally similar"
version = "0.4.0"
license = "MIT"
repository = "https://github.com/voidpumpkin/structural-convert/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
darling = "0.14.4"
