[package]
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2021"
name = "structural-convert"
description = "Derive conversion traits (From, Into, TryFrom, TryInto) when fields are structurally similar in enums or structs"
version = "0.12.0"
license = "MIT"
repository = "https://github.com/voidpumpkin/structural-convert/"
readme = "README.md"
keywords = ["mapping", "derive", "map", "from", "convert"]

[dependencies]
structural-convert-derive = { version = "0.2.0", path = "./structural-convert-derive" }

[workspace]
members = [".", "structural-convert-derive"]
